--- a/RobotWars/AndroidManifest.xml
+++ b/RobotWars/AndroidManifest.xml
@@ -35,6 +35,16 @@
         </activity>
         
         <activity
+            android:name=".InstructionsScreen"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
+        <activity
             android:name=".ConfigScreen"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
